--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -28,7 +28,7 @@
             <form action="/vhs-admin/impersonate-user" method="post">
                 <label for="admin">Admin:</label>
                 <input id="admin" name="admin"/>
-                <label for="userId">User:</label>
+                <label for="userId2">User:</label>
                 <input id="userId2" name="userId"/>
                 <button type="submit">Submit</button>
             </form>
